// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtworksListPage tests should refetch artworks list when artwork page is changed: page 1 1`] = `
<div
  class="w-full flex-2 lg:px-6 max-w-screen-xl"
  data-testid="artworks-listed"
>
  <div
    class="px-4 max-w-screen-xl py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 cursor-pointer"
    data-testid="6752ddca46e3ca48231024dc"
  >
    <div
      class="flex flex-row"
    >
      <span
        class="mr-4 flex items-center"
      >
        <input
          data-testid="6752ddca46e3ca48231024dc-checkbox"
          type="checkbox"
        />
      </span>
      <div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Tytuł
            : 
          </span>
          Jakym jechoł koło dworu
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Podtytuł
            : 
          </span>
          Tradycyjna pieśń ludowa o młodzieńcu przejeżdżającym obok dworu.
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Artyści
            : 
          </span>
          Józefa Piaskowska
        </div>
      </div>
    </div>
  </div>
  <div
    class="px-4 max-w-screen-xl py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 cursor-pointer"
    data-testid="6752ddca46e3ca48231024aa"
  >
    <div
      class="flex flex-row"
    >
      <span
        class="mr-4 flex items-center"
      >
        <input
          data-testid="6752ddca46e3ca48231024aa-checkbox"
          type="checkbox"
        />
      </span>
      <div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Tytuł
            : 
          </span>
          Ojcze, ojcze, kup mi kónia
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Podtytuł
            : 
          </span>
          Serdeczna prośba dziecka do ojca o konia.
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Artyści
            : 
          </span>
          Magdalena Figlak
        </div>
      </div>
    </div>
  </div>
  <div
    class="px-4 max-w-screen-xl py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 cursor-pointer"
    data-testid="6752ddca46e3ca48231024bb"
  >
    <div
      class="flex flex-row"
    >
      <span
        class="mr-4 flex items-center"
      >
        <input
          data-testid="6752ddca46e3ca48231024bb-checkbox"
          type="checkbox"
        />
      </span>
      <div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Tytuł
            : 
          </span>
          Piękna jagoda
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Podtytuł
            : 
          </span>
          Tradycyjna pieśń ludowa o młodzieńcu przejeżdżającym obok dworu.
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Artyści
            : 
          </span>
          Zespół Mazowsze
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtworksListPage tests should refetch artworks list when artwork page is changed: page 2 1`] = `
<div
  class="w-full flex-2 lg:px-6 max-w-screen-xl"
  data-testid="artworks-listed"
>
  <div
    class="px-4 max-w-screen-xl py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 cursor-pointer"
    data-testid="6752aaaa46e3ca48231024dc"
  >
    <div
      class="flex flex-row"
    >
      <span
        class="mr-4 flex items-center"
      >
        <input
          data-testid="6752aaaa46e3ca48231024dc-checkbox"
          type="checkbox"
        />
      </span>
      <div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Tytuł
            : 
          </span>
          W górach, nad rzeką
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Podtytuł
            : 
          </span>
          Opowieść o życiu w sercu natury
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Artyści
            : 
          </span>
          Józefa Piaskowska
        </div>
      </div>
    </div>
  </div>
  <div
    class="px-4 max-w-screen-xl py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 cursor-pointer"
    data-testid="6752aaaa46e5db48231024dc"
  >
    <div
      class="flex flex-row"
    >
      <span
        class="mr-4 flex items-center"
      >
        <input
          data-testid="6752aaaa46e5db48231024dc-checkbox"
          type="checkbox"
        />
      </span>
      <div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Tytuł
            : 
          </span>
          Skrzypce na polu
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Podtytuł
            : 
          </span>
          Pieśń zagrana wśród zbóż
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Artyści
            : 
          </span>
          Magdalena Figlak
        </div>
      </div>
    </div>
  </div>
  <div
    class="px-4 max-w-screen-xl py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 cursor-pointer"
    data-testid="1234aaca46e3ca48231024bb"
  >
    <div
      class="flex flex-row"
    >
      <span
        class="mr-4 flex items-center"
      >
        <input
          data-testid="1234aaca46e3ca48231024bb-checkbox"
          type="checkbox"
        />
      </span>
      <div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Tytuł
            : 
          </span>
          Pragnom uoczka, pragnom
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Podtytuł
            : 
          </span>
          Tęsknota zapisana w spojrzeniu
        </div>
        <div
          class="text-lg text-gray-800 dark:text-white"
        >
          <span
            class="text-gray-400 inline"
          >
            Artyści
            : 
          </span>
          Zespół Mazowsze
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtworksListPage tests should render artworks list component after data is fetched from API, collection name and description should be displayed 1`] = `
<div
  class="flex flex-row mb-4 mt-2"
  data-testid="collection-name-and-description-container"
>
  <div
    class="flex flex-col w-full"
  >
    <h2
      class="text-4xl font-bold text-gray-800 dark:text-white mb-1"
    >
      example collection
    </h2>
    <p
      class="text-xl text-gray-600 dark:text-gray-300"
    >
      example collection description
    </p>
  </div>
  <div>
    <button
      class="text-sm font-semibold h-fit mr-4 bg-gray-100 hover:bg-gray-100 flex items-center"
      disabled=""
    >
      <svg />
      <p
        class="ml-1"
      >
        Edytuj
      </p>
    </button>
  </div>
</div>
`;
